// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-jlyJG dMPRjC"
  >
    <div
      class="sc-uJMKN VhEfq"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-jlyJG dMPRjC"
  >
    <div
      class="sc-fAjcbJ jiKBrO"
    >
      <div
        class="sc-gisBJw fAQHWm"
      >
        Max column width:
        <input
          class="sc-kjoXOD fOBTMh"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-kgoBCf eFYvIT"
  >
    <div
      class="sc-bRBYWo cJFbiU"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-kgoBCf eFYvIT"
  >
    <pre
      class="sc-gipzik gTmrIn"
    >
      ╒═══╕
│"x"│
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
